--- a/style.css
+++ b/style.css
@@ -8,60 +8,87 @@
     --destovka-spacing-sm: 8px;
     --destovka-spacing-md: 16px;
     --destovka-spacing-lg: 32px;
+
+    font-family: "Jost", sans-serif;
+}
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+html,
+body {
+    height: 100%;
+    width: 100%;
 }
   
   .destovka-wrapper-flex {
     display: flex;
     flex-direction: row;
     max-width: 100vw;
+    height: 100%;
   }
 
   .destovka-side-container {
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
-    max-width: 25vw;
+    height: 100%;
     width: 350px;
     box-shadow: 0.3125rem 0 1.25rem rgba(176, 185, 193, 0.65);
   }
 
   .destovka-site-logo {
-    width: auto !important;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    padding: 24px;
+  }
+
+  .destovka-site-logo > img {
+    width: 100%;
   }
   
   .destovka-sidebar {
     flex: 0 0 280px;
-    background-color: var(--destovka-bg-light);
-    padding: 20px 0 20px 40px;
-    border-right: 1px solid #eee;
+    padding-top: 16px;
+    width: 90%;
+    align-self: flex-end;
   }
   
   .destovka-steps {
     display: flex;
     flex-direction: column;
-    gap: 12px;
     max-height: calc(100vh - 40px);
     overflow-y: auto;
-    margin-top: 70px;
+    margin-top: 0;
   }
   
   .destovka-step {
     display: none;
     align-items: center;
     gap: 12px;
-    height: 50px;
-    padding: 16px;
-    border-radius: 6px;
+    padding: 0 16px;
     background-color: white;
     cursor: pointer;
     border-top-left-radius: 32px;
     border-bottom-left-radius: 32px;
   }
   
+.destovka-step-line {
+    flex-shrink: 0;
+    border-left: 2px solid var(--destovka-success);
+    height: 36px;
+    width:0;
+    margin-left: 33px;
+    border-radius: 12px;
+}
+
   .destovka-step-active {
     display: flex;
-    background-color: #e6f3ff;
-    border-left: 3px solid var(--destovka-primary);
+    background-color: #e6f3ff;    
+    padding: 16px;
   }
   .destovka-step-completed {
     display: flex;
@@ -71,11 +98,15 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
     width: 34px;
     height: 34px;
+
     border-radius: 50%;
     background-color: #ddd;
     color: var(--destovka-inactive);
+
+    flex-shrink: 0;
   }
   
   .destovka-step-completed .destovka-step-number {
@@ -84,13 +115,13 @@
   }
   
   .destovka-step-active .destovka-step-number {
-    background-color: var(--destovka-primary);
+    background-color: var(--destovka-inactive);
     color: white;
   }
-  
+
   .destovka-step-title {
     flex: 1;
-    font-size: 18px;
+    font-size: 20px;
     line-height: 24px;
     color: var(--destovka-text-color);
   }
