--- a/style-m.css
+++ b/style-m.css
@@ -2,6 +2,11 @@
     .sidebar {
         position: sticky;
         top: 0;
+        z-index: 1;
+    }
+
+    .destovka-main-container {
+        padding: 12px 18px;
     }
 
     .destovka-wrapper-flex {
@@ -34,7 +39,7 @@
 
     .destovka-step {
         max-width: 200px;
-        padding: 4px 8px;
+        padding: 12px 18px;
         border-radius: 0;
     }
 
@@ -49,6 +54,25 @@
 
     .destovka-step-line {
         display: none;
+    }
+
+    .destovka-main-text {
+        font-size: 24px;
+    }
+
+    .destovka-main-text > img {
+        width: 100%;
+        height: auto;
+    }
+
+    .destovka-form {
+        flex-direction: column;
+        flex-wrap: nowrap;
+    }
+
+    .destovka-button-group {
+        justify-content: center;
+        margin-top: 0;
     }
   }
 
