Fix global html and body selectors

--- a/style.css
+++ b/style.css
@@ -13,16 +13,16 @@
     font-family: "Jost", sans-serif;
 }
 
-* {
+.destovka-html,
+.destovka-body {
+    height: 100%;
+    width: 100%;
+}
+
+.destovka-html * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-}
-
-html,
-body {
-    height: 100%;
-    width: 100%;
 }
   
   .destovka-wrapper-flex {
