--- a/style.css
+++ b/style.css
@@ -673,5 +673,55 @@
 }
 
 
+.destovka-product-card {
+    width: fit-content;
 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 8px;
 
+    padding: 16px;
+    border: 2px solid var(--destovka-border-color);
+    border-radius: 8px;
+    box-shadow: 0 4px 12px rgba(55, 204, 95, 0.1);    
+}
+
+.destovka-product-title {
+    font-size: 18px;
+    font-weight: 600;
+    color: var(--destovka-text-color);
+
+}
+
+.destovka-product-select-button {
+    display: flex;
+    justify-content: center;
+    padding: 8px 16px;
+    outline: 1px solid var(--destovka-success);
+    background: #fff;
+    color: var(--destovka-success);
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    font-weight: 500;
+    transition: all 0.2s ease;
+}
+
+.destovka-product-price {
+    font-size: 18px;
+    font-weight: 600;
+    color: var(--destovka-text-color);
+}
+
+.destovka-product-select-button:hover {
+    background: var(--destovka-success);
+    color: white;
+}
+
+.destovka-product-card-footer {
+    display: flex;
+    gap: 12px;
+    align-items: center;
+    padding-top: 12px;
+}
